--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,26 +9,20 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Set env
+      - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      -
-        name: Build and push
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v4
         with:
@@ -37,8 +31,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            akkuman/nginx-basic-auth:${{ env.RELEASE_VERSION }}
-            akkuman/nginx-basic-auth:latest
+            vikmstr/nginx-basic-auth:${{ env.RELEASE_VERSION }}
+            vikmstr/nginx-basic-auth:latest
           cache-from: |
             type=gha,scope=finally
           cache-to: type=gha,scope=finally
