--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       - "80:3000"
     depends_on:
       - application
-    environment: 
+    environment:
       - BIND_PORT=3000
       - FORWARD_HOST=application
       - FORWARD_PORT=80
+      - FORWARD_PROTOCOL=http
       - BASIC_USERNAME=john.doe
       - BASIC_PASSWORD=myp@ssword!
     networks:
